--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
   "name": "mango-gulp",
-  "version": "0.0.1",
+  "version": "1.0.12",
   "description": "A Gulp boilerplate.",
   "main": "gulpfile.js",
   "scripts": {
-    "postinstall": "cp -n gulpfile.boilerplate.js ../../gulpfile.js"
+    "postinstall": "mv gulpfile.boilerplate.js ../../gulpfile.js"
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "browser-sync": "^2.9.11",
     "del": "^2.0.2",
+    "eslint-plugin-angular": "^0.13.0",
     "gulp": "^3.9.0",
     "gulp-add-src": "^0.2.0",
+    "gulp-angular-htmlify": "^2.3.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-cached": "^1.1.0",
     "gulp-cat": "^0.3.3",
     "gulp-changed": "^1.3.0",
     "gulp-cheerio": "^0.6.2",
     "gulp-concat": "^2.6.0",
     "gulp-debug": "^2.1.2",
+    "gulp-eslint": "^1.0.0",
     "gulp-favicons": "^1.0.9",
     "gulp-filesize": "0.0.6",
     "gulp-ga": "0.0.4",
@@ -35,6 +39,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-print": "^2.0.1",
+    "gulp-remember": "^0.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-rev": "^6.0.1",
     "gulp-rev-delete-original": "0.0.2",
@@ -49,6 +54,7 @@
     "load-gulp-tasks": "^0.1.0",
     "load-plugins": "^2.1.0",
     "main-bower-files": "^2.9.0",
-    "metaparser": "^1.0.6"
+    "metaparser": "^1.0.6",
+    "through2": "^2.0.0"
   }
 }
